<resources>
    <string name="app_name">Promoto</string>
    <string name="input_new_task">添加新任务</string>
    <string name="delete">删除?</string>
    <string name="undo">取消</string>
    <string name="cancel">撤销</string>

    <string name="edit_task">编辑任务</string>
    <string name="add_sub_task">添加子任务</string>
    <string name="predict_promoto_count">预计番茄数</string>
    <string name="remind_time">提醒时间</string>
    <string name="remark">备注</string>
    <string name="delete_task">删除任务</string>
    <string name="upgrade">升级</string>
    <string name="confirm">确认</string>

    <string name="pro_tip_title">此功能为高级功能，请升级至高级版后使用</string>
    <string name="pro_tip_content">升级高级版可拥有更多独享功能，让你如虎添翼。点击下面的按钮了解更多的信息。</string>
    <string name="number_too_long">不允许输入超过规定长度的数据！</string>
    <string name="task_not_null">任务的内容不能为空</string>

    <!--设置-->
    <string name="account">帐号</string>
    <string name="login_register">登陆/注册</string>
    <string name="pro_version">高级版</string>
    <string name="sync">同步设置</string>
    <string name="function">功能</string>
    <string name="sound_effect">音效</string>
    <string name="promoto_clock">番茄钟</string>
    <string name="shield_app">屏蔽应用</string>
    <string name="target">目标</string>
    <string name="ui">界面</string>
    <string name="smart_device">智能设备</string>
    <string name="help">帮助</string>
    <string name="support_center">支持中心</string>
    <string name="shake">摇一摇，截屏反馈</string>
    <string name="update">更新</string>
    <string name="about">关于</string>


    <string name="top_task">置顶的任务会显示在这里</string>
    <string name="promoto">番茄土豆</string>
</resources>
